<resources>
    <string name="app_name">AcademAds</string>
    <string name="auth_text">Войдите в приложение:</string>
    <string name="sign_in_with_vk">Sign in with vk</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="categories_header">Категории</string>
    <string name="search_hint">Поиск товаров</string>
    <string name="rubles">руб</string>
    <string name="subscribe_text">Подписаться</string>
    <string name="write_seller">НАПИСАТЬ ПРОДАВЦУ</string>
    <string name="roubles">руб</string>
    <string name="booking">ЗАБРОНИРОВАТЬ</string>
    <string name="about">О товаре</string>
    <string name="subscribe">ПОДПИСАТЬСЯ</string>
    <string name="user_info">Информация о пользователе</string>
    <string name="dont_show_text">Не показывать отклоненные</string>
    <string name="create_ad">СОЗДАТЬ ОБЪЯВЛЕНИЕ</string>
    <string name="bans">Блокировки</string>
    <string name="chat_button_text">Чат с поддержкой</string>
    <string name="think_up_title">Придумайте заголовок:</string>
    <string name="think_up_description">Дайте описание:</string>
    <string name="title_input_text">Заголовок</string>
    <string name="description_input_text">Описание</string>
    <string name="think_up_price">Назовите цену</string>
    <string name="price_edit_text">Цена</string>
    <string name="free_text">Отдать бесплатно</string>
    <string name="check_categories">Выберите категории</string>
    <string name="pin_photos">Прикрепите фотографии:</string>
    <string name="send_to_moderation">ОТПРАВИТЬ НА МОДЕРАЦИЮ</string>
    <string name="search_ad">Поиск объявлений</string>
    <string name="selled">ПРОДАНО</string>
    <string name="recommendation_header">Рекомендации</string>
    <string name="login">Логин</string>
    <string name="log_in">ВОЙТИ</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="enter_name">Введите имя</string>
    <string name="your_name">Ваше имя:</string>
    <string name="enter_login">Введите логин:</string>
    <string name="enter_password">Введите пароль:</string>
    <string name="repeat_password">Повторите пароль:</string>
    <string name="pin_photo">Прикрепите аватар</string>
    <string name="ed_services">Учебные услуги</string>
    <string name="ed_supplies">Учебные принадлежности</string>
    <string name="appliances">Бытовая техника</string>
    <string name="electronics">Электроника</string>
    <string name="chip_other">Другое</string>
</resources>