<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Background">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reg_text"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:text="@string/registration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/enter_name_tv"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:text="@string/your_name"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reg_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="27dp"
                app:boxCornerRadiusBottomStart="27dp"
                app:boxCornerRadiusTopEnd="27dp"
                app:boxCornerRadiusTopStart="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_name_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/enter_login_tv"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:text="@string/enter_login"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="27dp"
                app:boxCornerRadiusBottomStart="27dp"
                app:boxCornerRadiusTopEnd="27dp"
                app:boxCornerRadiusTopStart="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_login_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/enter_pasword_tv"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:text="@string/enter_password"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="27dp"
                app:boxCornerRadiusBottomStart="27dp"
                app:boxCornerRadiusTopEnd="27dp"
                app:boxCornerRadiusTopStart="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_pasword_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repeat_pasword_tv"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:text="@string/repeat_password"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeat_password_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="27dp"
                app:boxCornerRadiusBottomStart="27dp"
                app:boxCornerRadiusTopEnd="27dp"
                app:boxCornerRadiusTopStart="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repeat_pasword_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pin_photo_tv"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:text="@string/pin_photo"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_layout" />

            <ImageButton
                android:id="@+id/pin_photo_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/camera_button"
                android:backgroundTint="#E2CBFF"
                android:src="@drawable/camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pin_photo_tv" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_button"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/PrimaryButtom"
                android:paddingHorizontal="4dp"
                android:text="@string/registration"
                android:textAppearance="@style/PrimaryButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin_photo_button"
                app:shapeAppearanceOverlay="@style/RoundedRectangle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text=""
                app:layout_constraintTop_toBottomOf="@id/registration_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>