<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/Background"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Background"
            android:paddingTop="56dp"
            android:paddingBottom="16dp"
            app:navigationIcon="@drawable/back"
            app:title="Создание объявления"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@drawable/toolbar_dropshadow" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Background">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/think_up_title"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/think_up_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="27dp"
                app:boxCornerRadiusBottomStart="27dp"
                app:boxCornerRadiusTopEnd="27dp"
                app:boxCornerRadiusTopStart="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/think_up_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_input_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/think_up_description"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/think_up_description"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="27dp"
                app:boxCornerRadiusBottomStart="27dp"
                app:boxCornerRadiusTopEnd="27dp"
                app:boxCornerRadiusTopStart="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/think_up_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_input_text"
                    android:minHeight="100dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/think_up_price"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/think_up_price"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="27dp"
                app:boxCornerRadiusBottomStart="27dp"
                app:boxCornerRadiusTopEnd="27dp"
                app:boxCornerRadiusTopStart="27dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/think_up_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_et"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_edit_text"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/for_free_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:checked="false"
                android:text="@string/free_text"
                android:textAlignment="center"
                android:textAppearance="@style/ProductTitle"
                android:textColor="@color/TextSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_layout"
                app:thumbTint="@color/Background"
                app:trackDecorationTint="@color/Background"
                app:trackTint="#E2CBFF" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/check_category"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/check_categories"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/for_free_switch" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                app:chipSpacingVertical="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_category">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Учебные услуги"
                    app:chipStrokeColor="@color/Border" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Учебные принадлежности"
                    app:chipStrokeColor="@color/Border" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Бытовая техника"
                    app:chipStrokeColor="@color/Border" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Электроника"
                    app:chipStrokeColor="@color/Border" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.Material3.Chip.Filter.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Другое"
                    app:chipStrokeColor="@color/Border" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pin_photos"
                style="@style/ProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/pin_photos"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips_category" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pin_photos">

                <ImageButton
                    android:id="@+id/pin_photo_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/camera_button"
                    android:backgroundTint="#E2CBFF"
                    android:src="@drawable/camera"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pin_photos" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pin_photo_button"
                    app:layout_constraintTop_toBottomOf="@id/pin_photos"
                    tools:listitem="@layout/item_photo" />

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_ad_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/PrimaryButtom"
                android:paddingHorizontal="4dp"
                android:text="@string/send_to_moderation"
                android:textAppearance="@style/PrimaryButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll"
                app:shapeAppearanceOverlay="@style/RoundedRectangle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text=""
                app:layout_constraintTop_toBottomOf="@id/create_ad_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>